microshift-luks-tpm/files/etc/microshift/manifests/testapp.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: test
  name: test
spec: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello
  name: test-hello
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello
    spec:
      containers:
      - image: CONTAINER_IMAGE
        imagePullPolicy: Always
        name: hello-js
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File      
        volumeMounts:
        - mountPath: /mnt
          name: my-volume
      volumes:
      - name: my-volume
        persistentVolumeClaim:
          claimName: test-lv-pvc        
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: test-nodeport
  namespace: test
spec:
  type: NodePort
  selector:
    app: hello
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30080
---
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: test
spec:
  selector:
    app: hello
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webapp
  namespace: test
spec:
  port:
    targetPort: 8080 
  to:
    kind: Service
    name: test-service
    weight: 10
